# stockman

./: .env.sample  .gitignore  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json  post-create.sh
app/: config.toml  config.toml.sample  main.py  tasks.py  upsidefinder.py
app/data/: set100.json
app/services/: helpers.py  read_cfg.py  set100.py  setall.py  shortcuts.py
app/services/backtests/: batch_simple_backtest.py  simple_backtest.py
