[tool.poetry]
name = "stockman"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
pandas = "^2.0.3"
yfinance = "^0.2.26"
pyportfolioopt = "^1.5.5"
beautifulsoup4 = "^4.12.2"
httpx = "^0.24.1"
rich = "^13.4.2"
matplotlib = "^3.7.2"
celery = "^5.3.1"
redis = "^4.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
